--- a/src/components/Products/index.module.css
+++ b/src/components/Products/index.module.css
@@ -55,4 +55,16 @@
   height: 150px;
   width: 90%;
   margin: 15px auto;
+  overflow: scroll;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: sticky;
+  background-color: white;
+  bottom: 0;
+  left: 0;
+  padding: 20px 0;
 }
