--- a/src/App.module.css
+++ b/src/App.module.css
@@ -10,3 +10,12 @@ body {
   height: 100vh;
   width: 100%;
 }
+
+.startBtn {
+  position: fixed;
+  top: 85%;
+  left: 14%;
+  border-radius: 10px;
+  font-size: 30px;
+  padding: 20px 70px;
+}
