--- a/src/components/Products/index.module.css
+++ b/src/components/Products/index.module.css
@@ -48,6 +48,19 @@
   border: 1px solid grey;
 }
 
+.searchIcon {
+  font-size: 30px;
+  padding: 5px;
+  color: white;
+}
+
+.imgContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
+  padding-left: 8px;
+}
 .productsContainer {
   display: flex;
   border: 1px solid grey;
@@ -67,4 +80,13 @@
   bottom: 0;
   left: 0;
   padding: 20px 0;
+}
+
+.footerIcons {
+  font-size: 24px;
+  color: grey;
+}
+
+.footerIcons:first-child {
+  color: black;
 }
