--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,7 +5,7 @@ body {
   position: relative;
   background-image: url("Start.png");
   background-size: contain;
-  background-position: center;
+  /* background-position: sc; */
   background-repeat: no-repeat;
   height: 100vh;
   width: 100%;
