--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,20 +2,21 @@ body {
   margin: 0;
 }
 .container {
-  position: relative;
-  background-image: url("Start.png");
-  background-size: contain;
-  /* background-position: sc; */
+  background-image: url("firstPage.jpeg");
+  background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
   width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
 }
 
 .startBtn {
-  position: fixed;
-  top: 85%;
-  left: 14%;
+  width: 60%;
+  text-align: center;
+  margin-bottom: 50px;
   border-radius: 10px;
-  font-size: 30px;
-  padding: 20px 70px;
+  font-size: 20px;
+  padding: 15px;
 }
