--- a/src/components/Products/index.module.css
+++ b/src/components/Products/index.module.css
@@ -32,17 +32,19 @@
 
 .filterBox {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 90%;
-  margin: 15px auto;
+  gap: 10px;
+  margin: 20px auto;
   padding: 10px;
 }
 
 .filterBtns {
   color: gray;
   padding: 10px 0;
-  width: 22%;
+  width: 30%;
   font-size: 8px;
   font-weight: 900;
   border-radius: 5px;
