--- a/src/components/ProductContainer/index.module.css
+++ b/src/components/ProductContainer/index.module.css
@@ -1,16 +1,22 @@
 .imgContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30%;
-    padding-left: 8px;
-  }
-  .productsContainer {
-    display: flex;
-    border: 1px solid grey;
-    gap: 15px;
-    height: 150px;
-    width: 90%;
-    margin: 15px auto;
-    overflow: scroll;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
+  padding-left: 8px;
+}
+.productsContainer {
+  display: flex;
+  border: 1px solid grey;
+  gap: 15px;
+  height: 150px;
+  width: 90%;
+  margin: 15px auto;
+  overflow: scroll;
+}
+
+.priceContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
