--- a/src/components/Product/index.module.css
+++ b/src/components/Product/index.module.css
@@ -1,23 +1,33 @@
 .imgContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30%;
-    padding-left: 8px;
-  }
-  .product {
-    display: flex;
-    border: 1px solid grey;
-    gap: 15px;
-    height: 150px;
-    width: 90%;
-    margin: 15px auto;
-    overflow: scroll;
-  }
-  
-  .priceContainer {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
+  padding-left: 8px;
+}
+.product {
+  display: flex;
+  border-radius: 10px;
+  border: 1px solid grey;
+  gap: 15px;
+  padding: 5px 0;
+  height: 150px;
+  width: 90%;
+  margin: 10px auto;
+  text-decoration: none;
+  color: black;
+}
+
+.priceContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.desc {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-right: 15px;
+  margin-left: 10px;
+}
