--- a/src/components/FavoritePage/index.module.css
+++ b/src/components/FavoritePage/index.module.css
@@ -1,5 +1,11 @@
 .lableContainer {
   position: relative;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .label {
