--- a/src/components/Footer/index.module.css
+++ b/src/components/Footer/index.module.css
@@ -2,13 +2,16 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  position: sticky;
+  position: fixed;
   background-color: white;
   bottom: 0;
   left: 0;
+  margin-top: 10px;
   padding: 30px 0;
   fill: rgba(0, 0, 0, 0.306);
   width: 100%;
+  box-shadow: 5px 5px 20px black;
+  overflow-x: scroll;
 }
 
 svg {
