--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
-body{
-    background-color: white;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+body {
+  background-color: white;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
 }
