--- a/src/components/FavoriteIcon/index.module.css
+++ b/src/components/FavoriteIcon/index.module.css
@@ -7,7 +7,8 @@
 
 .label {
   background-color: rgb(255, 5, 5);
-  padding: 2px;
+  padding: 3px;
+  font-weight: 700;
   width: 20px;
   font-size: 12px;
   border-radius: 50%;
@@ -16,6 +17,10 @@
   align-items: center;
   color: white;
   position: absolute;
-  bottom: 20px;
+  bottom: 15px;
   right: -10px;
+}
+
+.currentPage {
+  fill: black;
 }
