--- a/src/components/ProductDetail/index.module.css
+++ b/src/components/ProductDetail/index.module.css
@@ -24,3 +24,28 @@
   font-weight: 600;
   line-height: 13px;
 }
+
+.imageContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.addBtn {
+  font-size: 11px;
+  cursor: pointer;
+  padding: 10px;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+}
+
+.removeBtn {
+  font-size: 11px;
+  cursor: pointer;
+  padding: 10px;
+  background-color: rgb(112, 3, 3);
+  color: white;
+  border-radius: 10px;
+}
