--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -23,3 +23,29 @@
   align-items: center;
 }
 
+.menuBar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  flex: 1;
+  position: absolute;
+  background-color: rgb(36, 35, 35);
+  top: 100px;
+  left: 0;
+  color: white;
+  width: 100%;
+  font-style: 25px;
+  font-weight: 900;
+  padding: 30px 10px;
+  z-index: 1;
+}
+
+.menuBar a {
+  text-decoration: none;
+  padding: 10px;
+  color: white;
+}
+.hide {
+  display: none;
+}
